<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".initial"
    android:id="@+id/initcont">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="textPersonName"
                    android:textColor="@color/foreground_material_light"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="PrivateResource" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_working_days"
                android:textColor="@color/foreground_material_light"
                android:textAllCaps="true"
                android:textAlignment="center"
                tools:ignore="PrivateResource" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/monday"
                android:textAllCaps="true"
                android:id="@+id/d2" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/tuesday"
                android:textAllCaps="true"
                android:id="@+id/d3" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/wednesday"
                android:textAllCaps="true"
                android:id="@+id/d4" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/thursday"
                android:textAllCaps="true"
                android:id="@+id/d5" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textColor="@color/foreground_material_light"
                android:textAllCaps="true"
                android:id="@+id/d6" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/saturday"
                android:textAllCaps="true"
                android:id="@+id/d7" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_material_light"
                android:text="@string/sunday"
                android:textAllCaps="true"
                android:id="@+id/d1" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText">
                android:textColor="@color/foreground_material_light"

                <AutoCompleteTextView
                    android:id="@+id/npd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_periods_in_a_day"
                    android:textAllCaps="true"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/foreground_material_light"
                    android:textColorHint="@color/colorAccent"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/perct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimum_permissible_attendance"
                    android:textAllCaps="true"
                    android:textColor="@color/foreground_material_light"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="PrivateResource" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/tsub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_number_of_subjects"
                    android:textAllCaps="true"
                    android:inputType="number"
                    android:textColor="@color/foreground_material_light"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1"
                    android:singleLine="true" />



            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_lab_classes"
                android:textAllCaps="true"
                android:textColor="@color/foreground_material_light"
                android:textColorHint="@color/colorAccent"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/labsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lenght_of_lab_ex_one_1_lab_2_periods"
                android:textAllCaps="true"
                android:textColor="@color/foreground_material_light"
                android:textColorHint="@color/colorAccent"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/foreground_material_light"
                android:textColorHint="@color/colorAccent"
                android:background="@color/colorAccent"
                android:text="@string/get_started"
                android:textStyle="bold"
                android:onClick="bleh"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>